--- a/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
+++ b/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
@@ -148,6 +148,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI">
       <Version>6.0.0</Version>
     </PackageReference>
+    <PackageReference Include="UICompositionAnimations">
+      <Version>4.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.24.0</Version>
     </PackageReference>
