Minor code refactoring

--- a/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
+++ b/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
@@ -140,6 +140,10 @@
     <Compile Include="Brainf_ckIde\Brainf_ckIde.xaml.Win2D.cs" />
     <Compile Include="Brainf_ckIde\Enums\IndentationType.cs" />
     <Compile Include="Brainf_ckIde\Helpers\TextGenerator.cs" />
+    <Compile Include="Brainf_ckIde\Models\Abstract\IndentationIndicatorBase.cs" />
+    <Compile Include="Brainf_ckIde\Models\BlockIndicator.cs" />
+    <Compile Include="Brainf_ckIde\Models\FunctionIndicator.cs" />
+    <Compile Include="Brainf_ckIde\Models\LineIndicator.cs" />
     <Compile Include="Extensions\System\StringExtensions.cs" />
     <Compile Include="Extensions\System\UInt32Extensions.cs" />
     <Compile Include="Extensions\Windows.System\VirtualKeyExtensions.cs" />
