--- a/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
+++ b/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckSharp.UWP.Controls.IDE.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Brainf_ckEditBox\Helpers\CodeGenerator.cs" />
     <Compile Include="Brainf_ckEditBox\Brainf_ckEditBox.Formatting.Lock.cs" />
     <Compile Include="Brainf_ckEditBox\Models\ColumnGuideInfo.cs" />
+    <Compile Include="Brainf_ckEditBox\Models\PlainTextChangedEventArgs.cs" />
     <Compile Include="Brainf_ckIde\Brainf_ckIde.xaml.cs">
       <DependentUpon>Brainf_ckIde.xaml</DependentUpon>
     </Compile>
