Helper code refactored

--- a/src/Brainf_ckSharp.Buffers/Brainf_ckSharp.Buffers.csproj
+++ b/src/Brainf_ckSharp.Buffers/Brainf_ckSharp.Buffers.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Brainf_ckSharp.Diagnostics\Brainf_ckSharp.Diagnostics.csproj" />
+  </ItemGroup>
+
 </Project>
