--- a/unit/Brainf_ckSharp.Git.Unit/Brainf_ckSharp.Git.Unit.csproj
+++ b/unit/Brainf_ckSharp.Git.Unit/Brainf_ckSharp.Git.Unit.csproj
@@ -9,11 +9,15 @@
   <ItemGroup>
     <None Remove="Assets\MediumNew.txt" />
     <None Remove="Assets\MediumOld.txt" />
+    <None Remove="Assets\SmallNew.txt" />
+    <None Remove="Assets\SmallOld.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assets\MediumNew.txt" />
     <EmbeddedResource Include="Assets\MediumOld.txt" />
+    <EmbeddedResource Include="Assets\SmallNew.txt" />
+    <EmbeddedResource Include="Assets\SmallOld.txt" />
   </ItemGroup>
 
   <ItemGroup>
