Added clipboard service

--- a/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
+++ b/src/Brainf_ckSharp.UWP/Brainf_ckSharp.UWP.csproj
@@ -266,6 +266,8 @@
     <Compile Include="Models\Ide\SourceCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\XamlResources.cs" />
+    <Compile Include="Services\Clipboard\ClipboardService.cs" />
+    <Compile Include="Services\Clipboard\IClipboardService.cs" />
     <Compile Include="Services\Files\FilesService.cs" />
     <Compile Include="Services\Files\IFilesService.cs" />
     <Compile Include="Services\Keyboard\IKeyboardListenerService.cs" />
