Switched code library category converters to functions

--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -129,10 +129,9 @@
     <Compile Include="AttachedProperties\BlinkingAnimationHelper.cs" />
     <Compile Include="AttachedProperties\Brainf_ckInlineFormatterHelper.cs" />
     <Compile Include="AttachedProperties\ReactiveViewModelHelper.cs" />
-    <Compile Include="Bindings\Converters\CodeLibrary\CodeLibraryCategoryToUpperCameTitleConverter.cs" />
-    <Compile Include="Bindings\Converters\CodeLibrary\CodeLibraryCategoryToUpperTitleConverter.cs" />
     <Compile Include="Bindings\Converters\UserGuide\UserGuideSectionToDescriptionConverter.cs" />
     <Compile Include="Bindings\Converters\UserGuide\UserGuideSectionToTitleConverter.cs" />
+    <Compile Include="Bindings\Functions\CodeLibraryCategoryFormatter.cs" />
     <Compile Include="Bindings\Functions\Console\SyntaxErrorFormatterFunctions.cs" />
     <Compile Include="Bindings\Functions\Ide\CodeLibraryEntryFavoriteStateFormatter.cs" />
     <Compile Include="Bindings\Functions\NumericFunctions.cs" />
