--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -129,13 +129,13 @@
     <Compile Include="AttachedProperties\BlinkingAnimationHelper.cs" />
     <Compile Include="AttachedProperties\Brainf_ckInlineFormatterHelper.cs" />
     <Compile Include="AttachedProperties\ReactiveViewModelHelper.cs" />
-    <Compile Include="Bindings\Functions\CodeLibraryCategoryFormatter.cs" />
-    <Compile Include="Bindings\Functions\Console\SyntaxErrorFormatterFunctions.cs" />
-    <Compile Include="Bindings\Functions\Ide\CodeLibraryEntryFavoriteStateFormatter.cs" />
+    <Compile Include="Converters\SubPages\CodeLibraryCategoryConverter.cs" />
+    <Compile Include="Converters\Console\SyntaxValidationResultConverter.cs" />
+    <Compile Include="Converters\SubPages\CodeMetadataConverter.cs" />
     <Compile Include="Bindings\Functions\NumericFunctions.cs" />
     <Compile Include="Bindings\Functions\PivotSelectionFunctions.cs" />
-    <Compile Include="Bindings\Functions\UnicodeIntervalDescriptionFormatter.cs" />
-    <Compile Include="Bindings\Functions\UserGuideSectionFormatter.cs" />
+    <Compile Include="Converters\SubPages\UnicodeIntervalConverter.cs" />
+    <Compile Include="Converters\SubPages\UserGuideSectionConverter.cs" />
     <Compile Include="Constants\Settings.cs" />
     <Compile Include="Constants\SettingsKeys.cs" />
     <Compile Include="Controls\DataTemplates\Brainf_ckMemoryCellChunkTemplate.xaml.cs">
