--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -133,7 +133,7 @@
     <Compile Include="Converters\Console\SyntaxValidationResultConverter.cs" />
     <Compile Include="Converters\SubPages\CodeMetadataConverter.cs" />
     <Compile Include="Bindings\Functions\NumericFunctions.cs" />
-    <Compile Include="Bindings\Functions\PivotSelectionFunctions.cs" />
+    <Compile Include="Converters\PivotSelectionConverter.cs" />
     <Compile Include="Converters\SubPages\UnicodeIntervalConverter.cs" />
     <Compile Include="Converters\SubPages\UserGuideSectionConverter.cs" />
     <Compile Include="Constants\Settings.cs" />
